Startscript angepasst - siehe https://homebanking-hilfe.de/forum/topic.php?p=186115#real186115